--- a/style.css
+++ b/style.css
@@ -19,13 +19,15 @@ body {
 
 #app {
     background-color: white;
-    padding: 3rem 5rem;
+    padding: 3rem 5rem 3rem 2rem;
     min-height: 30rem;
+    min-width: 25rem;
     position: relative;
     border-left: 0.7rem dotted #219ebc;
     box-shadow: -5px 0px 0px 0px white;
 }
 
+/* Animazione di errore */
 @keyframes error {
     0% {transform: translate(0px);}
     20% {transform: translate(-3px);}
@@ -61,7 +63,38 @@ body {
 .title {
     position: absolute;
     top: 1rem;
-    left: 2rem;
+    left: 2rem
+}
+
+.commands {
+    margin-top: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.commands input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px dashed #125768;
+    width: 80%;
+    margin-right: 1rem;
+    font-size: 1.1rem;
+}
+
+.commands input:focus {
+    outline: none;
+}
+
+.commands button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.3rem;
+    color: #125768;
+}
+
+.commands button:hover {
+    color: #1F91AD;
 }
 
 ul li {
@@ -69,6 +102,26 @@ ul li {
     display: flex;
     width: 100%;
     justify-content: space-between;
-    margin-top: 0.1rem;
+    margin-top: 0.4rem;
+}
+
+ul li button {
+    background-color: transparent;
+    border: none;
+    font-size: 1.2rem;
     cursor: pointer;
+}
+
+ul li button:hover {
+    color: #6868B6;
+}
+
+ul li:hover {
+    cursor: pointer;
+    text-decoration: line-through;
+}
+
+ul li.done {
+    text-decoration: line-through;
+    color: gray
 }
